app/assets/stylesheets/video/main_index.scss
.main-video-index {
    display: flex;
    flex-wrap: wrap;
    margin-left: 70px;
    padding: 10px;
    // background-color: hsla(0, 0%, 96%, 1);
    // padding-top: 80px;
}

.placeholder {
        /* background-color: pink; */
    background: white;
    display: flex;
    font-size: 10px;
    padding-top: 65px;
    padding-left: 95px;
    padding-bottom: -2px;
    padding-top: -15px;
    /* padding-bottom: 0px; */
    justify-content: flex-start;
    align-items: center;
    overflow: auto;
    white-space: nowrap;
}

.video-tags-hide {
display: flex;
    font-size: 10px;
    padding-top: 5px;
    padding-left: 95px;
    padding-bottom: 5px;
    border-bottom: 1px solid #e5e5e5;
    border-top: 1px solid #e5e5e5;
    justify-content: flex-start;
    align-items: center;
    overflow: hidden;
    white-space: nowrap;
    height: 45px;
    background: white;
} 

.video-tags-show {
display: flex;
    font-size: 10px;
    padding-top: 5px;
    padding-left: 95px;
    padding-bottom: 5px;
    border-bottom: 1px solid #e5e5e5;
    border-top: 1px solid #e5e5e5;
    justify-content: flex-start;
    align-items: center;
    overflow: auto;
    white-space: nowrap;
    // height: 40px;
    background: white;
}

.tag {
margin-right: 10px;
    border: 1px solid #d9d9d9;
    padding: 7px;
    font-size: 14px;
    // font-weight: 900;
    border-radius: 28px;
    padding-left: 12px;
    padding-right: 12px;
    background-color: #f2f2f2;
    cursor: pointer;
}

.tag-active {
margin-right: 10px;
    border: 1px solid #d9d9d9;
    padding: 7px;
    font-size: 14px;
    // font-weight: 900;
    border-radius: 28px;
    padding-left: 12px;
    padding-right: 12px;
    color: white;
    background-color: #606060;
    cursor: pointer;
}

.search-video-index {
    // display: flex;
    // flex-wrap: wrap;
    margin-left: 70px;
    // margin-top: 5px;
    padding: 10px;
    // background-color: hsla(0, 0%, 96%, 1);
    padding-top: 80px;
}


.search-results {
    font-size: 14px;
    font-weight: 100;
    width: 83%;
    margin-bottom: 10px;
    margin-left: 10px;
    margin-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #8080808a;
}

.search-term {
    // font-style: italic;
    display: inline;
    font-weight: 900;
}

.search-description {
    margin-top: 10px;
    width: 80%;
    font-size: 14px;
}

.thumbnail {
    width: 290px;
    height: 165px;
    cursor: pointer;
    margin: 10px;
    object-fit: cover;
   animation: fadeIn 1s;
}

.search-thumbnail {
    width: 246px;
    height: 136px;
    cursor: pointer;
    margin: 10px;
    object-fit: cover;
   animation: fadeIn 1s;
}


.search-title-container {
    display: inline-block;
    margin-top: 19px;
}

@keyframes fadeIn {
    from {
        opacity: .5;
    }

    to {
        opacity: 1;
    }
}

.user-button-video-index {
    display: flex;
    justify-content: center;
    align-items: center;
    float: left;
    background: lightseagreen;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    margin-left: 12px;
    color: white;
    font-size: 15px;
    // margin-right: 15px;
    text-transform: capitalize;
    position: relative;
}

.fa-check-circle:before {
    content: "\f058";
    padding-left: 5px;
    font-size: 11px;
    color: #5e5e5e
}

.video-title {
    float: left;
    cursor: pointer;
    font-size: 14px;
    width: 225px;
    margin-left: 12px;
    text-decoration: none;
    color: black;
    margin-top: 3px;
    margin-bottom: 8px;
    line-height: normal;
    font-weight: 900;
}
.search-video-views {
    margin-left : 10px;
    font-size: 13px;
}


.search-video-title {
    cursor: pointer;
    position: absolute;
    font-size: 16px;
    float: right;
    width: -webkit-fill-available;
    margin-left: 3px;
    text-decoration: none;
    color: black;
    margin-top: -142px;
    margin-bottom: 9px;
    line-height: normal;
    font-weight: 900;
}


.video-info {
    margin-left: 59px;
    // margin-top: 38px;
    color: #5f5f5f;
    font-size: 14px;
    padding-bottom: 30px;
    line-height: normal;
}

.search-video-info {
    float: right;
    position: absolute;
    /* margin-top: 38px; */
    margin-left: 3px;
    margin-top: -122px;
    color: #5f5f5f;
    font-size: 14px;
    /* padding-bottom: 30px; */
    line-height: normal;
}

